--- a/boost/extensions/index.html
+++ b/boost/extensions/index.html
@@ -18,7 +18,7 @@
 
 <hr>
 <div class="spirit-nav">
-<a accesskey="p"  href="../examples/index.html"><img src="../images/prev.png" alt="Prev"></a><a accesskey="u" href="../index.html"><img src="../images/up.png" alt="Up"></a><a accesskey="h" href="../index.html"><img src="../images/home.png" alt="Home"></a><a accesskey="n"  href="../CHANGELOG/index.html"><img src="../images/next.png" alt="Next"></a>
+<a accesskey="p"  href="../examples/index.html"><img src="../images/prev.png" alt="Prev"></a><a accesskey="u" href="../index.html"><img src="../images/up.png" alt="Up"></a><a accesskey="h" href="../index.html"><img src="../images/home.png" alt="Home"></a><a accesskey="n"  href="../FAQ/index.html"><img src="../images/next.png" alt="Next"></a>
 </div>
 
 <div class="chapter">
@@ -184,8 +184,8 @@ class example {
 
 int main() {
   auto injector = di::make_injector&lt;contextual_bindings&gt;(
-      di::bind&lt;&gt;.to(123.f)
-    , di::bind&lt;int&gt;.to([](const auto&amp; injector) {
+      di::bind&lt;&gt;().to(123.f)
+    , di::bind&lt;int&gt;().to([](const auto&amp; injector) {
         if (context(injector) == &quot;example-&gt;data&quot;) return 87;
         return 42;
       })
@@ -840,7 +840,7 @@ hljs.initHighlightingOnLoad();
 
 <hr>
 <div class="spirit-nav">
-<a accesskey="p"  href="../examples/index.html"><img src="../images/prev.png" alt="Prev"></a><a accesskey="u" href="../index.html"><img src="../images/up.png" alt="Up"></a><a accesskey="h" href="../index.html"><img src="../images/home.png" alt="Home"></a><a accesskey="n"  href="../CHANGELOG/index.html"><img src="../images/next.png" alt="Next"></a>
+<a accesskey="p"  href="../examples/index.html"><img src="../images/prev.png" alt="Prev"></a><a accesskey="u" href="../index.html"><img src="../images/up.png" alt="Up"></a><a accesskey="h" href="../index.html"><img src="../images/home.png" alt="Home"></a><a accesskey="n"  href="../FAQ/index.html"><img src="../images/next.png" alt="Next"></a>
 </div>
 
 <script async defer id="github-bjs" src="https://buttons.github.io/buttons.js"></script>
