--- a/boost/extensions/index.html
+++ b/boost/extensions/index.html
@@ -408,11 +408,11 @@ namespace di = boost::di;
 class types_dumper : public di::config {
  public:
   static auto policies(...) noexcept {
-    return di::make_policies([](auto type, auto dependency, BOOST_DI_UNUSED auto... ctor) {
+    return di::make_policies([](auto type) {
       using T = decltype(type);
       using arg = typename T::type;
       using name = typename T::name;
-      using given = typename decltype(dependency)::given;
+      using given = typename T::given;
 
       auto tab = v[i - 1];
       while (tab--) {
@@ -422,7 +422,7 @@ class types_dumper : public di::config {
       std::clog &lt;&lt; &quot;(&quot; &lt;&lt; typeid(arg).name() &lt;&lt; ((*(name*)(0))() ? std::string(&quot;[&quot;) + (*(name*)(0))() + std::string(&quot;]&quot;) : &quot;&quot;)
                 &lt;&lt; &quot; -&gt; &quot; &lt;&lt; typeid(given).name() &lt;&lt; &quot;)&quot; &lt;&lt; std::endl;
 
-      auto ctor_size = sizeof...(ctor);
+      auto ctor_size = T::arity::value;
       while (ctor_size--) {
         v.insert((v.begin() + i), v[i - 1] + 1);
       }
@@ -475,10 +475,10 @@ class uml_dumper : public di::config {
 
   static auto policies(...) noexcept {
     /*&lt;&lt;define `uml dumper` directly in policies configuration&gt;&gt;*/
-    return di::make_policies([&amp;](auto type, auto dependency, BOOST_DI_UNUSED auto... ctor) {
+    return di::make_policies([&amp;](auto type) {
       using T = decltype(type);
       using name = typename T::name;
-      using given = typename decltype(dependency)::given;
+      using given = typename T::given;
 
       auto root = v[i - 1];
       if (root != &amp;typeid(nullptr)) {
@@ -486,7 +486,7 @@ class uml_dumper : public di::config {
                   &lt;&lt; ((*(name*)(0))() ? std::string(&quot; [&quot;) + (*(name*)(0))() + std::string(&quot;]&quot;) : &quot;&quot;) &lt;&lt; &quot;\&quot;&quot; &lt;&lt; std::endl;
       }
 
-      auto ctor_size = sizeof...(ctor);
+      auto ctor_size = T::arity::value;
       while (ctor_size--) {
         v.insert((v.begin() + i), &amp;typeid(given));
       }
