--- a/index.html
+++ b/index.html
@@ -299,8 +299,9 @@ app app_{controller_, user_};
 <p>DI library, not only let you forget about maintaining above code (See <a href="tutorial/index.html#1-basic-create-objects-tree">Create Objects Tree</a>),
 but also can help you with...</p>
 <ul>
-<li>Testing it (See <a href="extensions/index.html#mocks-provider">Mocks Provider</a>)</li>
-<li>Understanding your dependencies (See <a href="extensions/index.html#uml-dumper">UML Dumper</a>)</li>
+<li>Test it (See <a href="extensions/index.html#mocks-provider">Mocks Provider</a>)</li>
+<li>Serialize it (See <a href="extensions/index.html#serialize">Serialize</a>)</li>
+<li>Understand your dependencies (See <a href="extensions/index.html#uml-dumper">UML Dumper</a>)</li>
 <li>And even restrict what types and how they should be created (See <a href="user_guide/index.html#di_constructible">Constructible Policy</a>)</li>
 </ul>
 <h3 id="real-life-examples">Real Life examples?</h3>
@@ -424,5 +425,5 @@ but also can help you with...</p>
 
 <!--
 MkDocs version : 0.15.3
-Build Date UTC : 2016-05-01 13:08:52.202949
+Build Date UTC : 2016-05-01 13:29:25.081759
 -->
