--- a/index.html
+++ b/index.html
@@ -306,8 +306,9 @@ but also can help you with...</p>
 </ul>
 <h3 id="real-life-examples">Real Life examples?</h3>
 <ul>
-<li><a href="https://github.com/krzysztof-jusiak/match3">Match-3 Game</a><ul>
-<li>Simple game in C++14 using SDL2 / Model View Controller / Meta State Machine / Dependency Injection</li>
+<li><a href="https://github.com/modern-cpp-examples/match3">Match-3 Game</a><ul>
+<li>Simple web game in C++14 using SDL2 / Model View Controller / Meta State Machine / Dependency Injection / Range-V3 / Emscripten</li>
+<li><a href="http://modern-cpp-examples.github.io/match3">Play it online!</a></li>
 </ul>
 </li>
 </ul>
@@ -425,5 +426,5 @@ but also can help you with...</p>
 
 <!--
 MkDocs version : 0.15.3
-Build Date UTC : 2016-05-01 13:50:43.339514
+Build Date UTC : 2016-05-01 14:15:30.474611
 -->
