--- a/boost/index.html
+++ b/boost/index.html
@@ -111,7 +111,7 @@ Krzysztof Jusiak
 </thead>
 <tbody>
 <tr>
-<td>Your C++14 header only Dependency Injection library with no dependencies (<a href="http://boost-experimental.github.io/di/examples/index.html#hello-world"><strong>Try it online!</strong></a>)</td>
+<td>Your C++14 header only Dependency Injection library with no dependencies (<a href="http://boost-experimental.github.io/di/try_it/index.html"><strong>Try it online!</strong></a>)</td>
 <td><a class="github-button" href="https://github.com/boost-experimental/di" data-style="mega" data-count-href="/boost-experimental/di/stargazers" data-count-api="/repos/boost-experimental/di#stargazers_count" data-count-aria-label="# stargazers on GitHub" aria-label="Star boost-experimental/di on GitHub">GitHub</a></td>
 </tr>
 </tbody>
