--- a/overview/index.html
+++ b/overview/index.html
@@ -275,7 +275,7 @@ namespace di = boost::di;
 </tr>
 <tr>
 <td><code>BOOST_DI_CFG_CTOR_LIMIT_SIZE</code></td>
-<td>Limits number of allowed consturctor parameters [0-10, default=10] (See <a href="../user_guide/index.html#injections">Injections</a>)</td>
+<td>Limits number of allowed constructor parameters [0-10, default=10] (See <a href="../user_guide/index.html#injections">Injections</a>)</td>
 </tr>
 <tr>
 <td><code>BOOST_DI_CFG_DIAGNOSTICS_LEVEL</code></td>
