--- a/boost/extensions/index.html
+++ b/boost/extensions/index.html
@@ -97,6 +97,7 @@
 <li><a href="#lazy">Lazy</a></li>
 <li><a href="#named-parameters">Named Parameters</a></li>
 <li><a href="#xml-injection">XML Injection</a></li>
+<li><a href="#serialize">Serialize</a></li>
 <li><a href="#types-dumper">Types Dumper</a></li>
 <li><a href="#uml-dumper">UML Dumper</a></li>
 <li><a href="#mocks-provider">Mocks Provider</a></li>
