--- a/index.html
+++ b/index.html
@@ -296,6 +296,7 @@ app app_{controller_, user_};
 
 <p>Notice that <strong>ORDER</strong> in which above dependencies are created is <strong>IMPORTANT</strong> as well as that
 <strong>ANY</strong> change in <strong>ANY</strong> of the objects constructor will <strong>REQUIRE</strong> a change in this code!</p>
+<p><img alt="CPP" src="https://raw.githubusercontent.com/boost-experimental/di/cpp14/example/motivation.cpp" /></p>
 <p>DI library, not only let you forget about maintaining above code (See <a href="tutorial/index.html#1-basic-create-objects-tree">Create Objects Tree</a>),
 but also can help you with...</p>
 <ul>
@@ -307,8 +308,10 @@ but also can help you with...</p>
 <h3 id="real-life-examples">Real Life examples?</h3>
 <ul>
 <li><a href="https://github.com/modern-cpp-examples/match3">Match-3 Game</a><ul>
-<li>Simple web game in C++14 using SDL2 / Model View Controller / Meta State Machine / Dependency Injection / Range-V3 / Emscripten</li>
+<li>Simple web game in C++14 using SDL2 / Model View Controller / Meta State Machine / Dependency Injection / Range-V3 / Emscripten<ul>
 <li><a href="http://modern-cpp-examples.github.io/match3">Play it online!</a></li>
+</ul>
+</li>
 </ul>
 </li>
 </ul>
@@ -426,5 +429,5 @@ but also can help you with...</p>
 
 <!--
 MkDocs version : 0.15.3
-Build Date UTC : 2016-05-03 13:34:01.906674
+Build Date UTC : 2016-05-03 14:15:45.217758
 -->
