--- a/boost/index.html
+++ b/boost/index.html
@@ -179,6 +179,112 @@ app app_{controller_, user_};
 
 <p>Notice that <strong>ORDER</strong> in which above dependencies are created is <strong>IMPORTANT</strong> as well as that
 <strong>ANY</strong> change in <strong>ANY</strong> of the objects constructor will <strong>REQUIRE</strong> a change in this code!</p>
+<pre><code class="cpp">#include &lt;boost/di.hpp&gt;
+
+namespace di = boost::di;
+
+class controller;
+
+struct renderer {
+  int device;
+};
+
+class view {
+ public:
+  view(std::string /*title*/, const renderer&amp;) {}
+};
+
+class model {};
+class user {};
+
+class app {
+ public:
+  app(controller&amp;, user&amp;) {}
+};
+
+#if 1
+class controller {
+ public:
+  controller(model&amp;, view&amp;) {}
+};
+
+int main() {
+  /// NO DEPENDENCY INJECTION
+  {
+  renderer renderer_;
+  view view_{&quot;&quot;, renderer_};
+  model model_;
+  controller controller_{model_, view_};
+  user user_;
+  app app_{controller_, user_};
+  }
+
+  /// DEPENDENCY INJECTION
+  {
+  auto injector = di::make_injector();
+  auto app_ = injector.create&lt;app&gt;();
+  }
+}
+#endif
+
+#if 0
+class controller {
+ public:
+  controller(view&amp;, model&amp;) {}
+};
+
+int main() {
+  /// NO DEPENDENCY INJECTION
+  {
+  renderer renderer_;
+  view view_{&quot;&quot;, renderer_};
+  model model_;
+  //controller controller_{model_, view_};
+  controller controller_{view_, model_}; /// CHANGE
+  user user_;
+  app app_{controller_, user_};
+  }
+
+  /// DEPENDENCY INJECTION
+  {
+  auto injector = di::make_injector();
+  auto app_ = injector.create&lt;app&gt;();
+  }
+}
+#endif
+
+#if 0
+struct configuration {};
+class controller {
+ public:
+  controller(view&amp;, model&amp;, configuration) {}
+};
+
+int main() {
+  /// NO DEPENDENCY INJECTION
+  {
+  renderer renderer_;
+  view view_{&quot;&quot;, renderer_};
+  model model_;
+  //controller controller_{model_, view_};
+  controller controller_{view_, model_, configuration{}}; /// CHANGE
+  user user_;
+  app app_{controller_, user_};
+  }
+
+  /// DEPENDENCY INJECTION
+  {
+  auto injector = di::make_injector();
+  auto app_ = injector.create&lt;app&gt;();
+  }
+}
+#endif
+
+</code></pre>
+
+<ul>
+<li><a href="https://raw.githubusercontent.com/boost-experimental/di/cpp14/example/motivation.cpp">https://raw.githubusercontent.com/boost-experimental/di/cpp14/example/motivation.cpp</a></li>
+</ul>
 <p>DI library, not only let you forget about maintaining above code (See <a href="tutorial/index.html#1-basic-create-objects-tree">Create Objects Tree</a>),
 but also can help you with...</p>
 <ul>
@@ -190,8 +296,10 @@ but also can help you with...</p>
 <h3 id="real-life-examples">Real Life examples?</h3>
 <ul>
 <li><a href="https://github.com/modern-cpp-examples/match3">Match-3 Game</a><ul>
-<li>Simple web game in C++14 using SDL2 / Model View Controller / Meta State Machine / Dependency Injection / Range-V3 / Emscripten</li>
+<li>Simple web game in C++14 using SDL2 / Model View Controller / Meta State Machine / Dependency Injection / Range-V3 / Emscripten<ul>
 <li><a href="http://modern-cpp-examples.github.io/match3">Play it online!</a></li>
+</ul>
+</li>
 </ul>
 </li>
 </ul>
