--- a/boost/index.html
+++ b/boost/index.html
@@ -179,111 +179,8 @@ app app_{controller_, user_};
 
 <p>Notice that <strong>ORDER</strong> in which above dependencies are created is <strong>IMPORTANT</strong> as well as that
 <strong>ANY</strong> change in <strong>ANY</strong> of the objects constructor will <strong>REQUIRE</strong> a change in this code!</p>
-<pre><code class="cpp">#include &lt;boost/di.hpp&gt;
-
-namespace di = boost::di;
-
-class controller;
-
-struct renderer {
-  int device;
-};
-
-class view {
- public:
-  view(std::string /*title*/, const renderer&amp;) {}
-};
-
-class model {};
-class user {};
-
-class app {
- public:
-  app(controller&amp;, user&amp;) {}
-};
-
-#if 1
-class controller {
- public:
-  controller(model&amp;, view&amp;) {}
-};
-
-int main() {
-  /// NO DEPENDENCY INJECTION
-  {
-  renderer renderer_;
-  view view_{&quot;&quot;, renderer_};
-  model model_;
-  controller controller_{model_, view_};
-  user user_;
-  app app_{controller_, user_};
-  }
-
-  /// DEPENDENCY INJECTION
-  {
-  auto injector = di::make_injector();
-  auto app_ = injector.create&lt;app&gt;();
-  }
-}
-#endif
-
-#if 0
-class controller {
- public:
-  controller(view&amp;, model&amp;) {}
-};
-
-int main() {
-  /// NO DEPENDENCY INJECTION
-  {
-  renderer renderer_;
-  view view_{&quot;&quot;, renderer_};
-  model model_;
-  //controller controller_{model_, view_};
-  controller controller_{view_, model_}; /// CHANGE
-  user user_;
-  app app_{controller_, user_};
-  }
-
-  /// DEPENDENCY INJECTION
-  {
-  auto injector = di::make_injector();
-  auto app_ = injector.create&lt;app&gt;();
-  }
-}
-#endif
-
-#if 0
-struct configuration {};
-class controller {
- public:
-  controller(view&amp;, model&amp;, configuration) {}
-};
-
-int main() {
-  /// NO DEPENDENCY INJECTION
-  {
-  renderer renderer_;
-  view view_{&quot;&quot;, renderer_};
-  model model_;
-  //controller controller_{model_, view_};
-  controller controller_{view_, model_, configuration{}}; /// CHANGE
-  user user_;
-  app app_{controller_, user_};
-  }
-
-  /// DEPENDENCY INJECTION
-  {
-  auto injector = di::make_injector();
-  auto app_ = injector.create&lt;app&gt;();
-  }
-}
-#endif
-
-</code></pre>
-
 <ul>
-<li><a href="https://raw.githubusercontent.com/boost-experimental/di/cpp14/example/motivation.cpp">https://raw.githubusercontent.com/boost-experimental/di/cpp14/example/motivation.cpp</a></li>
+<li><a href="https://raw.githubusercontent.com/boost-experimental/di/cpp14/example/motivation.cpp"> Motivation Example</a></li>
 </ul>
 <p>DI library, not only let you forget about maintaining above code (See <a href="tutorial/index.html#1-basic-create-objects-tree">Create Objects Tree</a>),
 but also can help you with...</p>
