--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@ app app_{controller_, user_};
 
 <p>Notice that <strong>ORDER</strong> in which above dependencies are created is <strong>IMPORTANT</strong> as well as that
 <strong>ANY</strong> change in <strong>ANY</strong> of the objects constructor will <strong>REQUIRE</strong> a change in this code!</p>
-<p><img alt="CPP" src="https://raw.githubusercontent.com/boost-experimental/di/cpp14/example/motivation.cpp" /></p>
+<p><img alt="CPP(BTN)" src="./Run_Motivation_Example|https://raw.githubusercontent.com/boost-experimental/di/cpp14/example/motivation.cpp" /></p>
 <p>DI library, not only let you forget about maintaining above code (See <a href="tutorial/index.html#1-basic-create-objects-tree">Create Objects Tree</a>),
 but also can help you with...</p>
 <ul>
@@ -429,5 +429,5 @@ but also can help you with...</p>
 
 <!--
 MkDocs version : 0.15.3
-Build Date UTC : 2016-05-03 14:15:45.217758
+Build Date UTC : 2016-05-03 15:02:00.699855
 -->
