--- a/boost/index.html
+++ b/boost/index.html
@@ -182,13 +182,14 @@ app app_{controller_, user_};
 <ul>
 <li><a href="https://raw.githubusercontent.com/boost-experimental/di/cpp14/example/motivation.cpp"> Motivation Example</a></li>
 </ul>
+<p><br /><br /></p>
 <p>DI library, not only let you forget about maintaining above code (See <a href="tutorial/index.html#1-basic-create-objects-tree">Create Objects Tree</a>),
 but also can help you with...</p>
 <ul>
-<li>Test it (See <a href="extensions/index.html#mocks-provider">Mocks Provider</a>)</li>
-<li>Serialize it (See <a href="extensions/index.html#serialize">Serialize</a>)</li>
-<li>Understand your dependencies (See <a href="extensions/index.html#uml-dumper">UML Dumper</a>)</li>
-<li>And even restrict what types and how they should be created (See <a href="user_guide/index.html#di_constructible">Constructible Policy</a>)</li>
+<li>Testing it (See <a href="extensions/index.html#mocks-provider">Mocks Provider</a>)</li>
+<li>Serializing it (See <a href="extensions/index.html#serialize">Serialize</a>)</li>
+<li>Understand code dependencies (See <a href="extensions/index.html#uml-dumper">UML Dumper</a>)</li>
+<li>Restrict what types and how they should be created (See <a href="user_guide/index.html#di_constructible">Constructible Policy</a>)</li>
 </ul>
 <h3 id="real-life-examples">Real Life examples?</h3>
 <ul>
