--- a/index.html
+++ b/index.html
@@ -297,13 +297,14 @@ app app_{controller_, user_};
 <p>Notice that <strong>ORDER</strong> in which above dependencies are created is <strong>IMPORTANT</strong> as well as that
 <strong>ANY</strong> change in <strong>ANY</strong> of the objects constructor will <strong>REQUIRE</strong> a change in this code!</p>
 <p><img alt="CPP(BTN)" src="./Run_Motivation_Example|https://raw.githubusercontent.com/boost-experimental/di/cpp14/example/motivation.cpp" /></p>
+<p><br /><br /></p>
 <p>DI library, not only let you forget about maintaining above code (See <a href="tutorial/index.html#1-basic-create-objects-tree">Create Objects Tree</a>),
 but also can help you with...</p>
 <ul>
-<li>Test it (See <a href="extensions/index.html#mocks-provider">Mocks Provider</a>)</li>
-<li>Serialize it (See <a href="extensions/index.html#serialize">Serialize</a>)</li>
-<li>Understand your dependencies (See <a href="extensions/index.html#uml-dumper">UML Dumper</a>)</li>
-<li>And even restrict what types and how they should be created (See <a href="user_guide/index.html#di_constructible">Constructible Policy</a>)</li>
+<li>Testing it (See <a href="extensions/index.html#mocks-provider">Mocks Provider</a>)</li>
+<li>Serializing it (See <a href="extensions/index.html#serialize">Serialize</a>)</li>
+<li>Understand code dependencies (See <a href="extensions/index.html#uml-dumper">UML Dumper</a>)</li>
+<li>Restrict what types and how they should be created (See <a href="user_guide/index.html#di_constructible">Constructible Policy</a>)</li>
 </ul>
 <h3 id="real-life-examples">Real Life examples?</h3>
 <ul>
@@ -429,5 +430,5 @@ but also can help you with...</p>
 
 <!--
 MkDocs version : 0.15.3
-Build Date UTC : 2016-05-03 15:02:00.699855
+Build Date UTC : 2016-05-03 15:38:53.763569
 -->
