--- a/boost/index.html
+++ b/boost/index.html
@@ -317,6 +317,10 @@ but also can help you with...</p>
 <li>Be as non-intrusive as possible (See <a href="user_guide/index.html#injections">Injections</a>)</li>
 <li>Be easy to extend (See <a href="extensions/index.html">Extensions</a>)</li>
 </ul>
+<h3 id="related-materials">Related materials</h3>
+<ul>
+<li><a href="https://cppnow2016.sched.org/event/6Sfx/c14-dependency-injection-library-with-no-overhead-and-compile-time-guarantee-of-object-creation">CppNow-2016:</a> <a href="http://boost-experimental.github.io/di/cppnow-2016">C++14 Dependency Injection Library with no overhead and compile time guarantee of object creation</a></li>
+</ul>
 <h3 id="acknowledgements">Acknowledgements</h3>
 <ul>
 <li>Thanks to Bartosz Kalinczuk for code review and tips how to improve <code>Boost.DI</code></li>
