--- a/boost/benchmarks/index.html
+++ b/boost/benchmarks/index.html
@@ -288,7 +288,7 @@
 </thead>
 <tbody>
 <tr>
-<td><strong>Clang-3.7 -O2 / Java8 / Mono4.2</strong></td>
+<td><strong>Clang-3.7 -O2 / Java8 / Mono4.2 --aot</strong></td>
 <td><strong>Baseline</strong></td>
 <td><strong>Boost.DI</strong></td>
 <td><strong><a href="https://github.com/google/fruit">Google.Fruit</a></strong></td>
@@ -323,29 +323,14 @@
 <td>0.157s</td>
 <td>1.131s</td>
 </tr>
-</tbody>
-</table>
-<table>
-<thead>
 <tr>
-<th>Create a unique objects tree for each iteration<br /><br /><code>TYPES: 128</code>  <code>BINDINGS: 0</code>  <code>ITERATIONS: 1024</code></th>
-<th></th>
-<th></th>
-<th></th>
-<th></th>
-<th></th>
-<th></th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td><strong>Clang-3.7 -O2 / Java8 / Mono4.2</strong></td>
-<td><strong>Baseline</strong></td>
-<td><strong>Boost.DI</strong></td>
-<td><strong><a href="https://github.com/google/fruit">Google.Fruit</a></strong></td>
-<td><strong><a href="https://github.com/google/guice">Google.Guice</a></strong></td>
-<td><strong><a href="https://github.com/google/dagger">Dagger2</a></strong></td>
-<td><strong><a href="https://github.com/ninject/ninject">Ninject</a></strong></td>
+<td><code>TYPES: 128</code>  <code>BINDINGS: 0</code>  <code>ITERATIONS: 1024</code></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
 </tr>
 <tr>
 <td>Compilation time</td>
@@ -374,29 +359,14 @@
 <td>0.210s</td>
 <td>2.230s</td>
 </tr>
-</tbody>
-</table>
-<table>
-<thead>
 <tr>
-<th>Create a unique objects tree for each iteration<br /><br /><code>TYPES: 256</code>  <code>BINDINGS: 0</code>  <code>ITERATIONS: 1024</code></th>
-<th></th>
-<th></th>
-<th></th>
-<th></th>
-<th></th>
-<th></th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td><strong>Clang-3.7 -O2 / Java8 / Mono4.2</strong></td>
-<td><strong>Baseline</strong></td>
-<td><strong>Boost.DI</strong></td>
-<td><strong><a href="https://github.com/google/fruit">Google.Fruit</a></strong></td>
-<td><strong><a href="https://github.com/google/guice">Google.Guice</a></strong></td>
-<td><strong><a href="https://github.com/google/dagger">Dagger2</a></strong></td>
-<td><strong><a href="https://github.com/ninject/ninject">Ninject</a></strong></td>
+<td><code>TYPES: 256</code>  <code>BINDINGS: 0</code>  <code>ITERATIONS: 1024</code></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
 </tr>
 <tr>
 <td>Compilation time</td>
@@ -425,29 +395,14 @@
 <td>0.323s</td>
 <td>4.838s</td>
 </tr>
-</tbody>
-</table>
-<table>
-<thead>
 <tr>
-<th>Create a unique objects tree for each iteration<br /><br /><code>TYPES: 512</code>  <code>BINDINGS: 0</code>  <code>ITERATIONS: 1024</code></th>
-<th></th>
-<th></th>
-<th></th>
-<th></th>
-<th></th>
-<th></th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td><strong>Clang-3.7 -O2 / Java8 / Mono4.2</strong></td>
-<td><strong>Baseline</strong></td>
-<td><strong>Boost.DI</strong></td>
-<td><strong><a href="https://github.com/google/fruit">Google.Fruit</a></strong></td>
-<td><strong><a href="https://github.com/google/guice">Google.Guice</a></strong></td>
-<td><strong><a href="https://github.com/google/dagger">Dagger2</a></strong></td>
-<td><strong><a href="https://github.com/ninject/ninject">Ninject</a></strong></td>
+<td><code>TYPES: 512</code>  <code>BINDINGS: 0</code>  <code>ITERATIONS: 1024</code></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
 </tr>
 <tr>
 <td>Compilation time</td>
@@ -476,29 +431,14 @@
 <td>0.547s</td>
 <td>11.123s</td>
 </tr>
-</tbody>
-</table>
-<table>
-<thead>
 <tr>
-<th>Create a unique objects tree for each iteration<br /><br /><code>TYPES: 1024</code>  <code>BINDINGS: 0</code>  <code>ITERATIONS: 1024</code></th>
-<th></th>
-<th></th>
-<th></th>
-<th></th>
-<th></th>
-<th></th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td><strong>Clang-3.7 -O2 / Java8 / Mono4.2</strong></td>
-<td><strong>Baseline</strong></td>
-<td><strong>Boost.DI</strong></td>
-<td><strong><a href="https://github.com/google/fruit">Google.Fruit</a></strong></td>
-<td><strong><a href="https://github.com/google/guice">Google.Guice</a></strong></td>
-<td><strong><a href="https://github.com/google/dagger">Dagger2</a></strong></td>
-<td><strong><a href="https://github.com/ninject/ninject">Ninject</a></strong></td>
+<td><code>TYPES: 1024</code>  <code>BINDINGS: 0</code>  <code>ITERATIONS: 1024</code></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
 </tr>
 <tr>
 <td>Compilation time</td>
